--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -77,7 +77,7 @@
                     android:id="@+id/signup_id"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:hint="아이디는 12자 이내 영문,숫자로 입력해 주세요"
+                    android:hint="영문(2자) + 숫자 4~12자"
                     android:inputType="text"
                     android:maxLength="12"
                     android:maxLines="1"
@@ -101,7 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:ems="10"
-                    android:hint="비밀번호를 입력해 주세요."
+                    android:hint="영문(2자) + 특수문자 + 숫자 6~12자"
                     android:inputType="textPassword"
                     android:maxLength="12"
                     android:maxLines="1"
@@ -138,7 +138,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:ems="10"
-                    android:hint="비밀번호를 입력해 주세요."
+                    android:hint="비밀번호를 한번 더 입력해 주세요."
                     android:inputType="textPassword"
                     android:maxLength="12"
                     android:maxLines="1"
@@ -170,10 +170,11 @@
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.divider.MaterialDivider
+                    android:id="@+id/materialDivider"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/signup_additional_title"
@@ -255,29 +256,31 @@
                     android:id="@+id/signup_age_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:text="나이"
                     android:textSize="20dp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="@+id/signup_gender"
-                    app:layout_constraintStart_toStartOf="@+id/signup_gender"
-                    app:layout_constraintTop_toTopOf="@+id/signup_mbti_title" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/signup_mbti_ei" />
 
-                <NumberPicker
+                <DatePicker
                     android:id="@+id/signup_age_picker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="80dp"
-
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
                     android:layout_marginTop="8dp"
-                    android:background="@color/md_theme_errorContainer"
-                    android:solidColor="@color/md_theme_onPrimary"
-                    app:layout_constraintEnd_toEndOf="@+id/signup_age_title"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner"
+                    android:scaleX="1.3"
+                    android:scaleY="1.3"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/signup_age_title"
-                    app:layout_constraintTop_toBottomOf="@+id/signup_mbti_title" />
+                    app:layout_constraintTop_toBottomOf="@+id/signup_age_title" />
 
                 <ToggleButton
                     android:id="@+id/signup_mbti_ei"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:background="@color/md_theme_errorContainer"
                     android:text="ToggleButton"
                     android:textIsSelectable="false"
@@ -285,8 +288,7 @@
                     android:textOn="I"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/signup_age_picker"
-                    app:layout_constraintBottom_toBottomOf="@+id/signup_age_picker"/>
+                    app:layout_constraintTop_toBottomOf="@+id/signup_mbti_title"/>
 
                 <ToggleButton
                     android:id="@+id/signup_mbti_sn"
@@ -338,7 +340,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <Button
-        android:id="@+id/btn_supSignUp"
+        android:id="@+id/signup_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
